--- a/SnapCat/Info.plist
+++ b/SnapCat/Info.plist
@@ -46,10 +46,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Will only use your location whenever you post a message when the app is open.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Post photos from your library</string>
 </dict>
 </plist>
