Use iOS 15 for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,5 @@ jobs:
           DEVELOPER_DIR: ${{ env.CI_XCODE_13 }}
     - name: Send codecov
       run: bash <(curl https://codecov.io/bash)
+      env:
+          DEVELOPER_DIR: ${{ env.CI_XCODE_13 }}
