--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build-Test
       run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -project SnapCat.xcodeproj -scheme SnapCat -destination platform\=iOS\ Simulator,name\=iPhone\ 12\ Pro\ Max test | xcpretty
+      env:
+          DEVELOPER_DIR: ${{ env.CI_XCODE_13 }}
