--- a/SnapCat/ParseSwift.plist
+++ b/SnapCat/ParseSwift.plist
@@ -2,17 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>ApplicationID</key>
-    <string>applicationId</string>
-    <key>ClientKey</key>
-    <string>clientKey</string>
-    <key>Server</key>
-    <string>http://localhost:1337/1</string>
-    <key>UseTransactionsInternally</key>
-    <false/>
-    <key>CacheMemoryCapacity</key>
-    <real>60000000</real>
-    <key>CacheDiskCapacity</key>
-    <integer>100000000</integer>
+	<key>ApplicationID</key>
+	<string>applicationId</string>
+	<key>ClientKey</key>
+	<string>clientKey</string>
+	<key>Server</key>
+	<string>http://localhost:1337/1</string>
+	<key>UseTransactions</key>
+	<false/>
+	<key>CacheMemoryCapacity</key>
+	<real>60000000</real>
+	<key>CacheDiskCapacity</key>
+	<integer>100000000</integer>
 </dict>
 </plist>
