improved login/logout flow

--- a/SnapCat/ParseSwift.plist
+++ b/SnapCat/ParseSwift.plist
@@ -14,5 +14,7 @@
 	<real>60000000</real>
 	<key>CacheDiskCapacity</key>
 	<integer>100000000</integer>
+	<key>DeleteKeychainIfNeeded</key>
+	<true/>
 </dict>
 </plist>
