--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
 env:
-  CI_XCODE_13: '/Applications/Xcode_13.2.app/Contents/Developer'
+  CI_XCODE_13: '/Applications/Xcode_13.2.1.app/Contents/Developer'
 
 jobs:
   ios:
@@ -13,6 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build-Test
-      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -project SnapCat.xcodeproj -scheme SnapCat -destination platform\=iOS\ Simulator,name\=iPhone\ 12\ Pro\ Max test | xcpretty
+      run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -project SnapCat.xcodeproj -scheme SnapCat -destination platform\=iOS\ Simulator,name\=iPhone\ 12\ Pro\ Max build | xcpretty
       env:
           DEVELOPER_DIR: ${{ env.CI_XCODE_13 }}
