--- a/SnapCat/ParseSwift.plist
+++ b/SnapCat/ParseSwift.plist
@@ -3,11 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>ApplicationID</key>
-	<string>applicationId</string>
-	<key>ClientKey</key>
-	<string>clientKey</string>
+	<string>E036A0C5-6829-4B40-9B3B-3E05F6DF32B2</string>
 	<key>Server</key>
-	<string>http://localhost:1337/1</string>
+	<string>http://localhost:1337/parse</string>
 	<key>UseTransactions</key>
 	<false/>
 	<key>CacheMemoryCapacity</key>
